[package]
name = "relox"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
derive_more = { version = "1.0.0", features = ["error", "from", "display"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.1"
