[package]
name = "relox"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
derive_more = { version = "1.0.0", features = [
  "error",
  "from",
  "display",
  "add",
  "add_assign",
  "not",
  "mul",
  "mul_assign",
  "deref",
  "deref_mut",
] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.1"
ownit = "0.1.0"
zerocopy = { version = "0.8.14", features = ["derive"] }
log = "0.4.25"
env_logger = "0.11.6"
miette = { version = "7.4.0", features = ["fancy"] }
intrusive-collections = "0.9.7"
hashbrown = "0.15.2"
